--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3,6 +3,16 @@
  * Copyright 2014-2015 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+
+
+
+/*NELSON'S CODE FOR FORMS */
+
+.red
+{
+  color:#e64a19;
+}
+ /*-------------------------*/
 .materialize-red {
   background-color: #e51c23 !important;
 }
